# schema-viewer

./: .gitignore  README.md  pyproject.toml
schema_viewer/: __init__.py  cli.py  tui.py  viewer.py
