[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-viewer"
version = "0.1.0"
description = "A beautiful terminal viewer for JSON schemas using Rich"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["json", "schema", "viewer", "cli", "terminal", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
schema-viewer = "schema_viewer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/schema-viewer"
Repository = "https://github.com/yourusername/schema-viewer"
Issues = "https://github.com/yourusername/schema-viewer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_viewer*"]
exclude = ["tests*"]
